<resources>
    <string name="app_name">Trivia</string>
    <string name="text_title">Trivia</string>
    <string name="text_questionNo">Question: %d/%d</string>
    <string name="button_true">True</string>
    <string name="button_false">False</string>
    <string name="button_next">Next</string>
    <string name="answerCorrect">Correct!</string>
    <string name="answerWrong">Oops!</string>
    <string name="text_hiScore">High: %d</string>
    <string name="text_current">Current: %d</string>
</resources>