<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#141A33"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_Title"
        style="@style/textStyleTitle"
        android:text="@string/text_title"
        android:textColor="@color/textColor_lightGrey"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_questionNo"
        style="@style/textStyleTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/text_questionNo"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Title" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_Question"
        android:layout_width="match_parent"
        android:layout_height="153dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="#18213A"
        app:cardCornerRadius="6dp"
        app:cardElevation="2dp"
        app:cardMaxElevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_questionNo" />

    <Button
        android:id="@+id/buttonTrue"
        style="@style/styleButton"
        android:layout_width="match_parent"
        android:text="@string/button_true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView_Question" />

    <Button
        android:id="@+id/buttonFalse"
        style="@style/styleButton"
        android:layout_width="match_parent"
        android:text="@string/button_false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonTrue"/>

    <Button
        android:id="@+id/buttonNext"
        style="@style/styleButton"
        android:layout_width="wrap_content"
        android:text="@string/button_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonFalse" />
</androidx.constraintlayout.widget.ConstraintLayout>